Bug 1615072 - don't trigger the deadlock detector from static initializers for RWLock; r=mccr8

This change is a little gross, because we don't totally control where
the statically initialized instances of `RWLock` live, due to its uses
in third-party libraries.

Differential Revision: https://phabricator.services.mozilla.com/D62936